# krakenai

./: .gitignore  AGENTS.md  BUILD.bazel  BackgroundTask.nut  BackgroundTaskWorker.nut  BfsRoadPathfinder.nut  BuildTrucksAction.nut  FindAndBuildRoadAction.nut  MODULE.bazel  PersistentStorage.nut  PersistentStorageWorker.nut  Plan.nut  PlanChooser.nut  ProvideDepotAction.nut  ProvideStationAction.nut  README.md  RoadConnectionPlan.nut  RoadHelpers.nut  Settings.nut  TODO.txt  WaitForFirstTruckAtPickupAction.nut  action.nut  bootstrap.ps1  deploy.sh  info.nut  main.nut  plan.nut  roadconnection.nut  tile.nut
actions/: Action.nut  BuildTrucksAction.nut  FindAndBuildRoadAction.nut  ProvideDepotAction.nut  ProvideStationAction.nut  WaitForFirstTruckAtPickupAction.nut  template.nut
plans/: Plan.nut  PlanChooser.nut  RoadConnectionPlan.nut
scripts/bazel/: package_squirrel_ai.bzl
scripts/python/: BUILD.bazel  flatten_squirrel_includes.py  requirements.txt
scripts/python/tests/: test_flatten_squirrel_includes.py
src/: BackgroundTask.nut  StationName.nut
src/actions/: Action.nut  BuildTrucksAction.nut  FindAndBuildRoadAction.nut  ProvideDepotAction.nut  ProvideStationAction.nut  SelloutRoadGroupAction.nut  WaitForFirstTruckAtPickupAction.nut
src/containers/: BinaryRelation.nut
src/events/: EventHandler.nut
src/game/: PersistentStorage.nut  PersistentStorageWorker.nut
src/names/: PirateCompanyName.nut
src/pathfinders/: BfsRoadPathfinder.nut  FifoQueue.nut  HogExRoadPathfinder.nut
src/plans/: PlanChooser.nut  RoadConnectionPlan.nut  RoadSelloutPlan.nut
src/road_helpers/: RoadHelpers.nut  TruckOrders.nut
